--- a/.github/workflows/manual_deploy_to_firebase.yml
+++ b/.github/workflows/manual_deploy_to_firebase.yml
@@ -47,5 +47,8 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app/build/outputs/apk/debug/app-debug.apk
-          releaseNotes: ${{ inputs.release_notes }}
+          releaseNotes: | 
+            ${{ inputs.release_notes }}
+            Version: ${{ env.VERSION }}
+            Commit: ${{ env.COMMIT_SHA }}
 
