--- a/.github/workflows/manual_deploy_to_firebase.yml
+++ b/.github/workflows/manual_deploy_to_firebase.yml
@@ -47,8 +47,6 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app/build/outputs/apk/debug/app-debug.apk
-          releaseNotes: | 
-            ${{ inputs.release_notes }}
-            Version: ${{ env.VERSION }}
-            Commit: ${{ env.COMMIT_SHA }}
+          releaseNotes:  ${{ inputs.release_notes }}
+
 
