--- a/.github/workflows/manual_deploy_to_firebase.yml
+++ b/.github/workflows/manual_deploy_to_firebase.yml
@@ -47,6 +47,14 @@ jobs:
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: app/build/outputs/apk/debug/app-debug.apk
-          releaseNotes:  ${{ inputs.release_notes }}
+          releaseNotes: | 
+            ${{ inputs.release_notes }}
+            Version: ${{ steps.get_version.outputs.version }}
+            Commit: ${{ github.sha }}
 
+      - name: Get version from build.gradle
+        id: get_version
+        run: |
+          VERSION=$(grep 'versionName' app/build.gradle | awk '{print $2}' | tr -d '"')
+          echo "::set-output name=version::$VERSION"
 
